@@ -2,6 +2,10 @@
 ---------
 - The application has been refactored. Smaller, faster, and cleaner.
 - The application has been relicensed back to the Mozilla Public License 2.0.
+- Improved error checking
+- Improved program flow
+- Improved parameter passing
+- Improved dependency detection
 
 4.1.2
 ---------
